<resources>
    <string name="app_name">Placeholder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_posts">Posts</string>
    <string name="title_ooooppss">Ooooppss!</string>

    <string name="text_something_wrong">Something went wrong</string>

    <string name="action_retry">Retry</string>
    <string name="title_comments">Comments</string>
</resources>
