<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/background_gray"
             android:id="@+id/container">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btnClose"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:padding="12dp"
                        android:src="@drawable/ic_close"
                        android:tint="@color/gray"/>

                    <TextView
                        android:id="@+id/tvTitle"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center_vertical"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="16dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:padding="24dp"
                        android:elevation="2dp"
                        android:background="@drawable/bg_card"
                        android:orientation="vertical"
                        android:animateLayoutChanges="true">

                        <TextView
                            android:id="@+id/tvName"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/title_comments"
                            tools:text="Rost"/>

                        <TextView
                            android:id="@+id/tvMail"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/title_comments"
                            android:drawableStart="@drawable/ic_email"
                            android:drawableTint="@color/gray"
                            android:drawablePadding="16dp"
                            android:layout_marginTop="16dp"
                            tools:text="Rost"/>

                        <TextView
                            android:id="@+id/tvLocation"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/title_comments"
                            android:drawableStart="@drawable/ic_location"
                            android:drawableTint="@color/gray"
                            android:drawablePadding="16dp"
                            android:layout_marginTop="16dp"
                            tools:text="Rost"/>

                    </LinearLayout>

                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/title_comments"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvComments"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="2dp"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_comment"
                        android:animateLayoutChanges="true"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_ooooppss"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_something_wrong"/>

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:text="@string/action_retry"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>